<resources>
    <string name="app_name">Tecnobank</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="main_services">Principais</string>
    <string name="products_services">Produtos e Investimentos</string>
    <string name="service_services">Serviços</string>
    <string name="tranfers_service">Transferências</string>
    <string name="cards_service">Cartões</string>
    <string name="pay_check_service">Pagar Contas</string>
    <string name="reload_service">Recargas</string>
    <string name="add_money_service">Adicionar dinheiro</string>
    <string name="pix_qr_code_service">Pix/QR Code</string>
    <string name="salary_portability_service">Portabilidade de Salário</string>
    <string name="applying_my_money_service">Aplicando meu Dinheiro</string>
    <string name="my_investiments_service">Meus Investimentos</string>
    <string name="safe_service">Seguros</string>
    <string name="learn_invest_service">Aprenda a Investir</string>
    <string name="post_shell_service">Postos Shell</string>
    <string name="bid_radar_service">Radar de Ofertas</string>
    <string name="shopping_service">Shopping</string>
    <string name="where_loot_money_service">Onde sacar Dinheiro</string>
    <string name="nominate_and_win_service">Indique e Ganhe</string>
    <string name="pay_with_qr_code">Pagar com QR code</string>
    <string name="title_account_dependency">Liberação de serviços</string>
    <string name="title_card_1_account_dependency">Falta pouco</string>
    <string name="text_card_1_account_dependency">Complete as etapas e libere todos os serviços gratuitos</string>
    <string name="title_card_2_account_dependency">Habilite seu dispositivo</string>
    <string name="text_card_2_account_dependency">Essa ação garante mais segurança no uso da sua conta</string>
    <string name="title_cards">Cartão da Conta</string>
    <string name="title_2_cards">Use o saldo direto no seu cartão.</string>
    <string name="text_1_cards">Peça o seu grátis!</string>
    <string name="title_card_1_cards">Cartões TecnoBank</string>
    <string name="text_card_1_cards">Comprar Pré-Pago</string>
    <string name="title_cards_1">Cartões</string>
    <string name="title_card_3_cards">Cartões Tecnobank</string>
    <string name="text_card_3_cards">Saiba mais sobre os cartões TecnoBank ideais para você e para seu negócio</string>
    <string name="bt_extract_2">Entradas</string>
    <string name="bt_extract_1">Todos</string>
    <string name="bt_extract_3">Saídas</string>
    <string name="text_extract_1">Você não possui transações</string>
    <string name="text_extract_2">nos últimos 7 dias.</string>
    <string name="title_extract">Extrato de Transações</string>
    <string name="title_filter">Filtros</string>
    <string name="title_filter_1">Selecione o período</string>
    <string name="bt_filter">Aplicar filtros</string>
    <string name="title_home">TecnoBank</string>
    <string name="title_card_1">Saldo</string>
    <string name="text_card_1">Ver detalhes do saldo</string>
    <string name="text_card_2_home">Complete todas as etapas e libere todos os serviços gratuitos</string>
    <string name="title_card_2_home">Falta pouco!</string>
    <string name="title_card_3_home">Vantagens do TecnoBank para você</string>
    <string name="title_card_4_home">Precisa de ajuda?</string>
    <string name="text_card_4_home">Encontre as respostas que precisa ou entre em contato com a gente</string>
    <string name="bt_create_account">Criar Conta</string>
    <string name="missing_password">Esqueci minha senha</string>
    <string name="enter_login">Entrar</string>
    <string name="title_onbording">A sua conta grátis do TecnoBank</string>
    <string name="text_onbording">Serviços digitais na palma das suas mãos!</string>
    <string name="bt_user">Já sou cliente</string>
    <string name="bt_start_login">Começar</string>
    <string name="title_sales">Vendas</string>
    <string name="title_2_sales">Veja como é fácil vender com o TecnoBank!</string>
    <string name="bt_sales_lets_go">VAMOS LÁ!</string>
    <string name="text_1_sales">Venda pela internet através das redes sociais e WhatsApp, QR Code, boleto e muito mais</string>
    <string name="title_pix_qr_code">Pix/QR Code</string>
    <string name="free_card_1">GRÁTIS!</string>
    <string name="title_card_1_pix">Fazer transferência por Pix</string>
    <string name="text_card_1_pix">Transfira utilizando a chave ou os dados bancários.</string>
    <string name="title_card_2_pix">Transferir ou pagar QR Code</string>
    <string name="free_card_2">GRÁTIS!</string>
    <string name="title_card_3_pix">Pagar com QR Code</string>
    <string name="text_card_3_pix">Leia o QR Code para realizar o pagamento.</string>
    <string name="free_card_3">GRÁTIS!</string>
    <string name="title_card_4_pix">Pagar com Pix Copia e Cola</string>
    <string name="text_card_4_pix">Cole o código do QR que você copiou para pagar.</string>
    <string name="title_5_pix">Vender</string>
    <string name="free_card_4">GRÁTIS!</string>
    <string name="title_card_5_pix">Receber com QR code</string>
    <string name="text_card_5_pix">Crie um QR Code para receber dinheiro na hora.</string>
    <string name="title_6_pix">Minhas chaves ativas</string>
    <string name="text_6_pix">Você ainda não tem chaves cadastradas</string>
    <string name="text_7_pix">Compartilhe suas chaves ou seus dados báncarios para receber transferências grátis.</string>
    <string name="title_7_pix">CADASTRAR CHAVES</string>
    <string name="text_8_pix">Encontre as respostas que precisa ou entre em contato com a gente</string>
    <string name="title_info_shopping">TEM CASHBACK</string>
    <string name="title_info_safe">TEM NOVIDADE</string>
    <string name="title_info_pix">GRÁTIS</string>
    <string name="title_info_reload">BÔNUS INTERNET</string>
    <string name="title_info_cards">12X NO CARTÃO</string>
    <string name="title_notification">Notificações</string>
    <string name="title_tab_layoult_notification_3">PROMOÇÔES</string>
    <string name="title_tab_layoult_notification_2">SUA CONTA</string>
    <string name="title_tab_layoult_notification_1">TODAS</string>
    <string name="title_add_money_1">Adicionar dinheiro</string>
    <string name="add_money_account_title_2">Como deseja adicionar dinheiro à sua conta</string>
    <string name="virtual_card_caixa_title1">Cartão de débito virtual CAIXA</string>
    <string name="balance_subtitle_caixa_1">O saldo é liberado na mesma hora.</string>
    <string name="convenience_fee_subtitle_2">Taxa de conveniência: 1,20%</string>
    <string name="bank_slip_title_1">Boleto bancário</string>
    <string name="bank_slip_subtitle_1">Pague como preferir, e o saldo é liberado em até 3 dias uteis.</string>
    <string name="bank_slip_subtitle_2">Depósito gratuito</string>
    <string name="receive_salary_title_1">Receber o salário pelo TecnoBank</string>
    <string name="receive_salary_subtitle_1">Ganhe um cartão de crédito sem anuidade.</string>
    <string name="bank_transfer_title_1">Transferência bancária</string>
    <string name="bank_transfer_subtitle_1">De qualquer banco para a sua conta TecnoBank.</string>
    <string name="bank_transfer_subtitle_2">Saldo liberado em até 1 dia útil.</string>
    <string name="qr_code_pix_title_1">QR Code Pix</string>
    <string name="qr_code_pix_subtitle_1">Adicione dinheiro na sua conta de qualquer banco, saldo na hora.</string>
    <string name="benefits_cardview_title_1">Titulo</string>
    <string name="benefits_description_subtitle_1">descrição da vantagem</string>
    <string name="benefits_link_subtitle_2">text_link</string>
    <string name="cards_subtitle_2">CONHEÇA</string>
    <string name="extract_hour_title_1">00:00</string>
    <string name="payment_subtitle_1">Pagamento</string>
    <string name="extract_subtitle_2">Venda digitada</string>
    <string name="extract_price_subtitle_3">50,00</string>
    <string name="extract_rs_subtitle_4">R$</string>
    <string name="header_extract_title_1">01 Jan</string>
    <string name="home_rs_title_1">R$</string>
    <string name="home_balance_subtitle_1">0,00</string>
    <string name="home_sales_receivable_subtitle_3">Vendas a receber</string>
    <string name="home_rs_subtitle_5">R$</string>
    <string name="home_price_subtitle_6">0,00</string>
    <string name="item_filter_last_days_title_1">Últimos X dias</string>
    <string name="item_notification_date_title_1">11/07/2021</string>
    <string name="item_notification_promotion_new_house_title_1">Promoção Casa Nova Tecnobank</string>
    <string name="item_notification_house_of_dreams_subtitle_1">Concorra a uma casa dos sonhos, prêmios para renovar sua casa e muitos vale-compras</string>
    <string name="item_notification_participe_subtitle_3">PARTICIPE!</string>
    <string name="item_my_profile_title_1">Meu Perfil</string>
    <string name="list_no_message_title_1">Nenhuma mensagem para a</string>
    <string name="list_selection_subtitle_1">Seleção .</string>
    <string name="login_e_mail_title_1">E-mail</string>
    <string name="login_password_subtitle_1">Senha</string>
    <string name="login_remember_my_account_subtitle_2">Lembrar minha conta</string>
    <string name="pay_check_title_1">Pagar contas</string>
    <string name="pay_check_subtitle_1">O que deseja fazer?</string>
    <string name="pay_check_subtitle_2">EM ATÉ 12X</string>
    <string name="pay_check_subtitle_3">Pagar usando código de barras - parcele no cartão</string>
    <string name="pay_check_subtitle_4">Leia o código de barras ou digite o número para pagar contas.</string>
    <string name="pay_check_subtitle_6">Pagar usando código de barras - use o seu saldo</string>
    <string name="pay_check_subtitle_7">Leia o código de barras ou digite o número para pagar contas.</string>
    <string name="pay_check_subtitle_8">Conectar e-mail com o app</string>
    <string name="pay_check_subtitle_9">Sincronize o seu e-mail e gerencie todos os seus boletos pelo app.</string>
    <string name="pay_check_subtitle_10">Fazer pagamentos do Detran MG</string>
    <string name="pay_check_subtitle_11">Pague débitos dos seus veículos do estado de Minas Gerais.</string>
    <string name="pay_qr_code_title_1">Pague suas compras com seu celular</string>
    <string name="pay_qr_code_subtitle_2">Você pode pagar nas maquininhas e aplicativos TecnoBank. Para utilizar essa função, precisamos acessar a sua câmera.</string>
    <string name="pay_qr_code_subtitle_4">PERMITIR</string>
    <string name="pix_qr_code_subtitle_5">Precisa de ajuda?</string>
    <string name="prepaid_card_subtitle_1">Cartão Pré-Pago</string>
    <string name="prepaid_subtitle_2">Pré-Pago</string>
    <string name="prepaid_card_subtitle_3">Controle os gastos, acompanhe o saldo no app e recarregue sempre que quiser.</string>
    <string name="prepaid_card_subtitle_4">Sem fatura e sem mensalidades: gaste apenas o saldo disponível no cartão</string>
    <string name="profile_title_1">Olá,</string>
    <string name="profile_subtitle_1">compassouol@pbpuc.com</string>
    <string name="profile_subtitle_2">Banco</string>
    <string name="profile_subtitle_3">290 - Tecnobank S.A</string>
    <string name="profile_subtitle_4">Conta</string>
    <string name="profile_subtitle_5">00000000-0</string>
    <string name="profile_subtitle_6">Agência</string>
    <string name="profile_subtitle_7">0000</string>
    <string name="profile_subtitle_8">Copiar</string>
    <string name="qr_code_safe_title_1">Habilitação de segurança necessária para continuar</string>
    <string name="qr_code_subtitle_1">Começar habilitação</string>
    <string name="qr_code_subtitle_2">Para garantir a segurança da sua conta é fundamental que realize a habilitação</string>
    <string name="qr_code_subtitle_4">Foto do seu documento e selfie</string>
    <string name="qr_code_subtitle_5">Fazer isso depois</string>
</resources>